Started finel train

--- a/create_w_companies.ipynb
+++ b/create_w_companies.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
     "df = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"train\"])\n",
     "df_2 = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"test\"])\n",
-    "df.drop(\"dataset\")\n",
-    "df_2.drop(\"dataset\")\n",
+    "df.drop(\"dataset\",axis=1)\n",
+    "df_2.drop(\"dataset\",axis=1)\n",
     "df_train_notr = pd.concat((df[df[\"label\"]==\"Notr\"],df_2[df_2[\"label\"]==\"Notr\"],df_yasemin_notr,df_emre_notr),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
     "df_train_pos = pd.concat((df[df[\"label\"]==\"Positive\"],df_2[df_2[\"label\"]==\"Positive\"],df_yasemin_pos,df_emre_pos),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
     "df_train_neg = pd.concat((df[df[\"label\"]==\"Negative\"],df_2[df_2[\"label\"]==\"Negative\"],df_yasemin_neg,df_emre_neg),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_place_to_text_2(truncated_text,labels,label):\n",
+    "    index_company = np.random.randint(0,len(truncated_text))\n",
+    "    index_city = np.random.randint(0,len(truncated_text))\n",
+    "    index_name = np.random.randint(0,len(truncated_text))\n",
+    "    index_surname = np.random.randint(0,len(truncated_text))\n",
+    "    index_place = np.random.randint(0,len(truncated_text))\n",
+    "    index_county = np.random.randint(0,len(truncated_text))\n",
+    "    index_country = np.random.randint(0,len(truncated_text))\n",
+    "    #----------------------------------------------------------\n",
+    "    company = str(np.random.choice(companies_array)).casefold().strip()\n",
+    "    city = np.random.choice(cities).casefold().strip()\n",
+    "    name = np.random.choice(names).casefold().strip()\n",
+    "    surname = np.random.choice(surnames).casefold().strip()\n",
+    "    place = np.random.choice(places).casefold().strip()\n",
+    "    county = np.random.choice(counties).casefold().strip()\n",
+    "    country = np.random.choice(countries).casefold().strip()\n",
+    "    #---------------------------------------------------------\n",
+    "    index = np.random.choice([index_company,index_city,index_name,index_surname,index_place,index_county,index_country])\n",
+    "    named_entity = np.random.choice([company,city,name,surname,place,county,country])\n",
+    "    #----------------------------------------------------------\n",
+    "    labels.insert(index,label)\n",
+    "    truncated_text.insert(index,named_entity)\n",
+    "    #-----------------------------------------\n",
+    "    return truncated_text,labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +358,10 @@
     "        while left<right:\n",
     "            truncated_text = splitted_text[left:right]\n",
     "            if len(truncated_text) <25:\n",
-    "                useless.append(\" \".join(truncated_text))\n",
+    "                if count == 0:\n",
+    "                    useless.append(\" \".join(truncated_text))\n",
     "                break\n",
+    "            count += 1\n",
     "            seperated_texts.append(truncated_text)\n",
     "            left = deepcopy(right)\n",
     "            right += 25\n",
@@ -342,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,57 +396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "170917\n",
-      "262166\n",
-      "56561\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df_train_notr))\n",
-    "print(len(df_train_pos))\n",
-    "print(len(df_train_neg))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless = pd.DataFrame({\"text\":df_useless_notr+df_useless_neg+df_useless_pos,\"label\":[1]*len(df_useless_notr)+[2]*len(df_useless_neg)+[3]*len(df_useless_pos)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless_notr = df_useless[df_useless[\"label\"]==1].sample(56561,random_state=42)\n",
-    "df_useless_neg = df_useless[df_useless[\"label\"]==2].sample(56561,random_state=42)\n",
-    "df_useless_pos = df_useless[df_useless[\"label\"]==3].sample(56561,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56561\n",
-      "56561\n",
-      "56561\n"
+      "179812\n",
+      "39211\n",
+      "206857\n"
      ]
     }
    ],
@@ -424,7 +417,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_useless = pd.DataFrame({\"text\":df_useless_notr+df_useless_neg+df_useless_pos,\"label\":[1]*len(df_useless_notr)+[2]*len(df_useless_neg)+[3]*len(df_useless_pos)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_useless_notr = df_useless[df_useless[\"label\"]==1].sample(39211,random_state=42)\n",
+    "df_useless_neg = df_useless[df_useless[\"label\"]==2].sample(39211,random_state=42)\n",
+    "df_useless_pos = df_useless[df_useless[\"label\"]==3].sample(39211,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39211\n",
+      "39211\n",
+      "39211\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df_useless_notr))\n",
+    "print(len(df_useless_neg))\n",
+    "print(len(df_useless_pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,48 +476,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(10):\n",
+    "for _ in range(15):\n",
     "    df_useless = sklearn.utils.shuffle(df_useless,random_state=42)\n",
     "    concated_text = []\n",
     "    labels = []\n",
     "    for text,label in zip(df_useless[\"text\"],df_useless[\"label\"]):\n",
     "        splitted_text = str(text).split()\n",
-    "        for truncated_text,return_labels in create_data([splitted_text],label,add_palces=False):\n",
-    "            concated_text += truncated_text[:len(splitted_text)]\n",
-    "            labels += return_labels[:len(splitted_text)]\n",
-    "        if len(concated_text) < 25:\n",
-    "            continue\n",
-    "        concated_text = concated_text[:25]\n",
-    "        labels = labels[:25]\n",
-    "        notr_count = labels.count(1)\n",
-    "        neg_count = labels.count(2)\n",
-    "        pos_count = labels.count(3)\n",
-    "        overall_label = 0\n",
-    "        if notr_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "            concated_text,labels = add_place_to_text(concated_text,labels,1)\n",
-    "            overall_label = 1\n",
-    "        elif neg_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "            concated_text,labels = add_place_to_text(concated_text,labels,2)\n",
-    "            overall_label = 2\n",
-    "        else:\n",
-    "            concated_text,labels = add_place_to_text(concated_text,labels,3)\n",
-    "            overall_label = 3\n",
-    "        texts_with_companies.append({\n",
-    "        \"text\":\" \".join(concated_text),\n",
-    "        \"sentiment\":overall_label,\n",
-    "        \"labels\":deepcopy(labels)\n",
-    "        })\n",
-    "        concated_text = []\n",
-    "        labels = []"
+    "        if len(splitted_text) != 0:\n",
+    "            for truncated_text,return_labels in create_data([splitted_text],label,add_palces=False):\n",
+    "                concated_text += truncated_text[:len(splitted_text)]\n",
+    "                labels += return_labels[:len(splitted_text)]\n",
+    "                concated_text,labels = add_place_to_text_2(concated_text,labels,label)\n",
+    "            if len(concated_text) < 32:\n",
+    "                continue\n",
+    "            concated_text = concated_text[:32]\n",
+    "            labels = labels[:32]\n",
+    "            notr_count = labels.count(1)\n",
+    "            neg_count = labels.count(2)\n",
+    "            pos_count = labels.count(3)\n",
+    "            overall_label = 0\n",
+    "            if notr_count == np.max([notr_count,neg_count,pos_count]):\n",
+    "                overall_label = 1\n",
+    "            elif neg_count == np.max([notr_count,neg_count,pos_count]):\n",
+    "                overall_label = 2\n",
+    "            else:\n",
+    "                overall_label = 3\n",
+    "            texts_with_companies.append({\n",
+    "            \"text\":\" \".join(concated_text),\n",
+    "            \"sentiment\":overall_label,\n",
+    "            \"labels\":deepcopy(labels)\n",
+    "            })\n",
+    "            concated_text = []\n",
+    "            labels = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +524,7 @@
     "\n",
     "\n",
     "df_final = sklearn.utils.shuffle(pd.DataFrame(texts_with_companies),random_state=42)\n",
-    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_final.csv\",index=False)"
+    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_final_1.5.csv\",index=False)"
    ]
   }
  ],
