--- a/create_w_companies_128.ipynb
+++ b/create_w_companies_128.ipynb
@@ -320,10 +320,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_data(seperated_texts:list,label,add_palces=True):\n",
-    "    for truncated_text in seperated_texts:\n",
-    "        labels = [0]*121\n",
-    "        for i,word in enumerate(truncated_text):\n",
+    "def create_data(truncated_text:list,label,add_palces=True):\n",
+    "    labels = [0]*121\n",
+    "    for i,word in enumerate(truncated_text):\n",
+    "        if word != \"\":\n",
     "            if label == 1:\n",
     "                if word in notr_bow_set:\n",
     "                    labels[i]=1\n",
@@ -335,10 +335,10 @@
     "            elif label ==3:\n",
     "                if word in positive_bow_set:\n",
     "                    labels[i]=3\n",
-    "        if add_palces:\n",
-    "            yield add_place_to_text(truncated_text,labels,label)\n",
-    "        else:\n",
-    "            yield truncated_text,labels"
+    "    if add_palces:\n",
+    "        yield add_place_to_text(truncated_text,labels,label)\n",
+    "    else:\n",
+    "        yield truncated_text,labels"
    ]
   },
   {
@@ -347,31 +347,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_data_loop(data,sentiment):\n",
-    "    useless = []\n",
-    "    for text,label in zip(data,repeat(sentiment)):\n",
-    "        left = 0\n",
-    "        right = 121\n",
-    "        seperated_texts = []\n",
-    "        splitted_text = text.split()\n",
-    "        count = 0\n",
-    "        while left<right:\n",
-    "            truncated_text = splitted_text[left:right]\n",
-    "            if len(truncated_text) <121:\n",
-    "                if count == 0:\n",
-    "                    useless.append(\" \".join(truncated_text))\n",
-    "                break\n",
-    "            count += 1\n",
-    "            seperated_texts.append(truncated_text)\n",
-    "            left = deepcopy(right)\n",
-    "            right += 121\n",
-    "        for truncated_text,labels in create_data(seperated_texts,label):\n",
-    "            texts_with_companies.append({\n",
-    "                \"text\":\" \".join(truncated_text),\n",
-    "                \"sentiment\":label,\n",
-    "                \"labels\":labels\n",
-    "            })\n",
-    "    return useless"
+    "import string\n",
+    "\n",
+    "table = str.maketrans('', '', string.punctuation)"
    ]
   },
   {
@@ -380,143 +358,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_dict = {\"Notr\":1,\"Negative\":2,\"Positive\":3}"
+    "def create_data_loop(data,sentiment):\n",
+    "    useless = []\n",
+    "    for text,label in zip(data,repeat(sentiment)):\n",
+    "        splitted_text = text.casefold().split()[:121]\n",
+    "        if len(splitted_text)>0:\n",
+    "            for truncated_text,labels in create_data(splitted_text,label):\n",
+    "                texts_with_companies.append({\n",
+    "                    \"text\":\" \".join(truncated_text),\n",
+    "                    \"sentiment\":label,\n",
+    "                    \"labels\":labels\n",
+    "                })\n",
+    "    return useless"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_useless_notr = create_data_loop(df_train_notr,1)\n",
-    "df_useless_neg = create_data_loop(df_train_neg,2)\n",
-    "df_useless_pos = create_data_loop(df_train_pos,3)"
+    "create_data_loop(df_train_notr,1)\n",
+    "create_data_loop(df_train_neg,2)\n",
+    "create_data_loop(df_train_pos,3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "181538\n",
-      "66060\n",
-      "305851\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df_useless_notr))\n",
-    "print(len(df_useless_neg))\n",
-    "print(len(df_useless_pos))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless = pd.DataFrame({\"text\":df_useless_notr+df_useless_neg+df_useless_pos,\"label\":[1]*len(df_useless_notr)+[2]*len(df_useless_neg)+[3]*len(df_useless_pos)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless_notr = df_useless[df_useless[\"label\"]==1].sample(66060,random_state=42)\n",
-    "df_useless_neg = df_useless[df_useless[\"label\"]==2].sample(66060,random_state=42)\n",
-    "df_useless_pos = df_useless[df_useless[\"label\"]==3].sample(66060,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66060\n",
-      "66060\n",
-      "66060\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df_useless_notr))\n",
-    "print(len(df_useless_neg))\n",
-    "print(len(df_useless_pos))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless = pd.concat((df_useless_notr,df_useless_neg,df_useless_pos),ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless = sklearn.utils.shuffle(df_useless,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(80):\n",
-    "    df_useless = sklearn.utils.shuffle(df_useless,random_state=42)\n",
-    "    concated_text = []\n",
-    "    labels = []\n",
-    "    for text,label in zip(df_useless[\"text\"],df_useless[\"label\"]):\n",
-    "        splitted_text = str(text).split()\n",
-    "        if len(splitted_text) != 0:\n",
-    "            for truncated_text,return_labels in create_data([splitted_text],label,add_palces=False):\n",
-    "                concated_text += truncated_text[:len(splitted_text)]\n",
-    "                labels += return_labels[:len(splitted_text)]\n",
-    "                concated_text,labels = add_place_to_text_2(concated_text,labels,label)\n",
-    "            if len(concated_text) < 128:\n",
-    "                continue\n",
-    "            concated_text = concated_text[:128]\n",
-    "            labels = labels[:128]\n",
-    "            notr_count = labels.count(1)\n",
-    "            neg_count = labels.count(2)\n",
-    "            pos_count = labels.count(3)\n",
-    "            overall_label = 0\n",
-    "            if notr_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "                overall_label = 1\n",
-    "            elif neg_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "                overall_label = 2\n",
-    "            else:\n",
-    "                overall_label = 3\n",
-    "            texts_with_companies.append({\n",
-    "            \"text\":\" \".join(concated_text),\n",
-    "            \"sentiment\":overall_label,\n",
-    "            \"labels\":deepcopy(labels)\n",
-    "            })\n",
-    "            concated_text = []\n",
-    "            labels = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +404,7 @@
     "\n",
     "\n",
     "df_final = sklearn.utils.shuffle(pd.DataFrame(texts_with_companies),random_state=42)\n",
-    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_final_8_128.csv\",index=False)"
+    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_final_3_128.csv\",index=False)"
    ]
   }
  ],
